@@ -1,19 +1,27 @@
 package com.rodin.sanitaryEngineeringShop.model;
 
-import lombok.*;
+
+import lombok.AccessLevel;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.crypto.password.PasswordEncoder;
 
-import javax.persistence.*;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
-@Entity(name = "add_user")
+// TODO: 15.10.2022
+// fix model class User
+@Entity
 @Data
-@NoArgsConstructor(access = AccessLevel.PUBLIC, force = true)
-@AllArgsConstructor
+@NoArgsConstructor(access = AccessLevel.PRIVATE, force = true)
+@RequiredArgsConstructor
 public class User implements UserDetails {
 
     private static final long serialVersionUID = 1L;
@@ -22,27 +30,23 @@ public class User implements UserDetails {
     @GeneratedValue(strategy = GenerationType.AUTO)
     private Long id;
 
-    private String userName;
-    private String password;
-
-    public User(String username, String password) {
-        this.userName = username;
-        this.password = password;
-    }
+    private final String userName;
+    private final String password;
+    private final String fullName;
+    private final String street;
+    private final String city;
+    private final String state;
+    private final String zip;
+    private final String phoneNumber;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
     public String getUsername() {
-        return this.userName;
-    }
-
-    @Override
-    public String getPassword() {
-        return this.password;
+        return null;
     }
 
     @Override
